public class BotPlayer extends Player{
    public BotPlayer(int id, String name, Symbol symbol) {
        super(id, name, symbol, PlayerType.BOT);
    }


}
