public class Cell {
    public int number;
    public int jumpTo;

    public Cell(int number) {
        this.number = number;
        this.jumpTo = jumpTo;
    }

    public int getNumber() {
        return number;
    }

    public void setNumber(int number) {
        this.number = number;
    }

    public int getJumpTo() {
        return jumpTo;
    }

    public void setJumpTo(int jumpTo) {
        this.jumpTo = jumpTo;
    }
}
