public class Ladder {
    public int start;
    public int end;

    public Ladder(int start, int end) {
        this.start = start;
        this.end = end;
    }


}
