public enum PlayerType {

    HUMAN, BOT

}
