public class Snake {
    public int start;
    public int end;

    public Snake(int start, int end) {
        this.start = start;
        this.end = end;
    }

}
