public enum Symbol {

    A, B
}
